kubernetes/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orderinventory
  labels:
    name: orderinventory
